Training with Dino V1 encoder running

--- a/notebooks/06_la_dino.ipynb
+++ b/notebooks/06_la_dino.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -442,22 +442,63 @@
        "torch.Size([1, 384])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img = torch.randn(1, 3, 224, 224)\n",
+    "# Get random integers from 0 to 255\n",
+    "img = torch.randint(0, 255, (1, 224, 224, 3), dtype=torch.uint8)\n",
+    "img = img.permute(0, 3, 1, 2).float() / 255.0\n",
     "\n",
     "vits16(img).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(384,)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vits16.norm.normalized_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb Cell 22\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Get embeddings for a random sample of 1000 images\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m emb_sim_1 \u001b[39m=\u001b[39m get_embeddings(sample_n_rows(d_sim[\u001b[39m\"\u001b[39;49m\u001b[39mcolor_image1\u001b[39;49m\u001b[39m\"\u001b[39;49m], \u001b[39m1000\u001b[39;49m), vits16)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m emb_sim_2 \u001b[39m=\u001b[39m get_embeddings(sample_n_rows(d_sim[\u001b[39m\"\u001b[39m\u001b[39mcolor_image2\u001b[39m\u001b[39m\"\u001b[39m], \u001b[39m1000\u001b[39m), vits16)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# emb_real_1 = get_embeddings(sample_n_rows(d_real[\"color_image1\"], 1000), vits16)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# emb_real_2 = get_embeddings(sample_n_rows(d_real[\"color_image2\"], 1000), vits16)\u001b[39;00m\n",
+      "\u001b[1;32m/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb Cell 22\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msample_n_rows\u001b[39m(arr, n):\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(arr\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], n, replace\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/06_la_dino.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m arr[idx]\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/core.py:842\u001b[0m, in \u001b[0;36mArray.__getitem__\u001b[0;34m(self, selection)\u001b[0m\n\u001b[1;32m    840\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvindex[selection]\n\u001b[1;32m    841\u001b[0m \u001b[39melif\u001b[39;00m is_pure_orthogonal_indexing(pure_selection, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mndim):\n\u001b[0;32m--> 842\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_orthogonal_selection(pure_selection, fields\u001b[39m=\u001b[39;49mfields)\n\u001b[1;32m    843\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    844\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_basic_selection(pure_selection, fields\u001b[39m=\u001b[39mfields)\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/core.py:1124\u001b[0m, in \u001b[0;36mArray.get_orthogonal_selection\u001b[0;34m(self, selection, out, fields)\u001b[0m\n\u001b[1;32m   1121\u001b[0m \u001b[39m# setup indexer\u001b[39;00m\n\u001b[1;32m   1122\u001b[0m indexer \u001b[39m=\u001b[39m OrthogonalIndexer(selection, \u001b[39mself\u001b[39m)\n\u001b[0;32m-> 1124\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_selection(indexer\u001b[39m=\u001b[39;49mindexer, out\u001b[39m=\u001b[39;49mout, fields\u001b[39m=\u001b[39;49mfields)\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/core.py:1388\u001b[0m, in \u001b[0;36mArray._get_selection\u001b[0;34m(self, indexer, out, fields)\u001b[0m\n\u001b[1;32m   1385\u001b[0m \u001b[39mif\u001b[39;00m math\u001b[39m.\u001b[39mprod(out_shape) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m   1386\u001b[0m     \u001b[39m# allow storage to get multiple items at once\u001b[39;00m\n\u001b[1;32m   1387\u001b[0m     lchunk_coords, lchunk_selection, lout_selection \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mindexer)\n\u001b[0;32m-> 1388\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_chunk_getitems(\n\u001b[1;32m   1389\u001b[0m         lchunk_coords,\n\u001b[1;32m   1390\u001b[0m         lchunk_selection,\n\u001b[1;32m   1391\u001b[0m         out,\n\u001b[1;32m   1392\u001b[0m         lout_selection,\n\u001b[1;32m   1393\u001b[0m         drop_axes\u001b[39m=\u001b[39;49mindexer\u001b[39m.\u001b[39;49mdrop_axes,\n\u001b[1;32m   1394\u001b[0m         fields\u001b[39m=\u001b[39;49mfields,\n\u001b[1;32m   1395\u001b[0m     )\n\u001b[1;32m   1396\u001b[0m \u001b[39mif\u001b[39;00m out\u001b[39m.\u001b[39mshape:\n\u001b[1;32m   1397\u001b[0m     \u001b[39mreturn\u001b[39;00m out\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/core.py:2228\u001b[0m, in \u001b[0;36mArray._chunk_getitems\u001b[0;34m(self, lchunk_coords, lchunk_selection, out, lout_selection, drop_axes, fields)\u001b[0m\n\u001b[1;32m   2226\u001b[0m \u001b[39mfor\u001b[39;00m ckey, chunk_select, out_select \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(ckeys, lchunk_selection, lout_selection):\n\u001b[1;32m   2227\u001b[0m     \u001b[39mif\u001b[39;00m ckey \u001b[39min\u001b[39;00m cdatas:\n\u001b[0;32m-> 2228\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_process_chunk(\n\u001b[1;32m   2229\u001b[0m             out,\n\u001b[1;32m   2230\u001b[0m             cdatas[ckey],\n\u001b[1;32m   2231\u001b[0m             chunk_select,\n\u001b[1;32m   2232\u001b[0m             drop_axes,\n\u001b[1;32m   2233\u001b[0m             out_is_ndarray,\n\u001b[1;32m   2234\u001b[0m             fields,\n\u001b[1;32m   2235\u001b[0m             out_select,\n\u001b[1;32m   2236\u001b[0m             partial_read_decode\u001b[39m=\u001b[39;49mpartial_read_decode,\n\u001b[1;32m   2237\u001b[0m         )\n\u001b[1;32m   2238\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   2239\u001b[0m         \u001b[39m# check exception type\u001b[39;00m\n\u001b[1;32m   2240\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fill_value \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/core.py:2141\u001b[0m, in \u001b[0;36mArray._process_chunk\u001b[0;34m(self, out, cdata, chunk_selection, drop_axes, out_is_ndarray, fields, out_selection, partial_read_decode)\u001b[0m\n\u001b[1;32m   2139\u001b[0m \u001b[39mexcept\u001b[39;00m ArrayIndexError:\n\u001b[1;32m   2140\u001b[0m     cdata \u001b[39m=\u001b[39m cdata\u001b[39m.\u001b[39mread_full()\n\u001b[0;32m-> 2141\u001b[0m chunk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_decode_chunk(cdata)\n\u001b[1;32m   2143\u001b[0m \u001b[39m# select data from chunk\u001b[39;00m\n\u001b[1;32m   2144\u001b[0m \u001b[39mif\u001b[39;00m fields:\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/core.py:2402\u001b[0m, in \u001b[0;36mArray._decode_chunk\u001b[0;34m(self, cdata, start, nitems, expected_shape)\u001b[0m\n\u001b[1;32m   2400\u001b[0m         chunk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compressor\u001b[39m.\u001b[39mdecode_partial(cdata, start, nitems)\n\u001b[1;32m   2401\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 2402\u001b[0m         chunk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_compressor\u001b[39m.\u001b[39;49mdecode(cdata)\n\u001b[1;32m   2403\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   2404\u001b[0m     chunk \u001b[39m=\u001b[39m cdata\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Get embeddings for a random sample of 1000 images\n",
     "emb_sim_1 = get_embeddings(sample_n_rows(d_sim[\"color_image1\"], 1000), vits16)\n",
