Start saving images better compressed for image training

--- a/notebooks/06_la_dino.ipynb
+++ b/notebooks/06_la_dino.ipynb
@@ -519,6 +519,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "\n",
+    "with open(\n",
+    "    \"/data/scratch/ankile/furniture-data-old/data/raw/sim/image_small/one_leg/low/2023-10-25-17:49:38/2023-10-25-17:49:38.pkl\",\n",
+    "    \"rb\",\n",
+    ") as f:\n",
+    "    data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['observations', 'actions', 'rewards', 'skills', 'success', 'furniture', 'error', 'error_description'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
