--- a/notebooks/14_la_render_video.ipynb
+++ b/notebooks/14_la_render_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,18 @@
     "from tqdm import tqdm\n",
     "import wandb as wb\n",
     "import imageio\n",
-    "from io import BytesIO"
+    "from io import BytesIO\n",
+    "import pickle\n",
+    "import zarr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_gif_or_mp4(np_images, filename, fps=10, is_mp4=False):\n",
+    "def create_gif_or_mp4(np_images, filename, fps=10):\n",
     "    # duration = 1000 / fps\n",
     "    with imageio.get_writer(filename, fps=fps) as writer:\n",
     "        for img in tqdm(np_images):\n",
@@ -103,7 +105,7 @@
    ],
    "source": [
     "# For MP4\n",
-    "create_gif_or_mp4(np_images, \"output.mp4\", is_mp4=True)"
+    "create_gif_or_mp4(np_images, \"output.mp4\")"
    ]
   },
   {
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +387,149 @@
     "\n",
     "# end the run\n",
     "wb.finish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check the rollouts produced and saved"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rollout_path = \"/data/pulkitag/data/ankile/furniture-data/data/raw/sim_rollouts/2023-12-05_12-00-34/rollout_0.pkl\"\n",
+    "\n",
+    "with open(rollout_path, \"rb\") as f:\n",
+    "    rollout = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Produce a video of the rollout\n",
+    "vid1, vid2 = zip(\n",
+    "    *[(o[\"color_image1\"], o[\"color_image2\"]) for o in rollout[\"observations\"]]\n",
+    ")\n",
+    "\n",
+    "vid = np.concatenate([vid1, vid2], axis=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 114.36it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as output.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make video\n",
+    "create_gif_or_mp4(vid, \"output.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some unrelated testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = zarr.open(\n",
+    "    \"/data/scratch/ankile/furniture-diffusion/replay_buffer.zarr\", mode=\"r\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27672"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data[\"data\"][\"stage\"][:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "136"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data[\"meta\"][\"episode_ends\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1672955667.7093015"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"data\"][\"timestamp\"][3]"
    ]
   },
   {
