MLP baseline running

--- a/notebooks/15_la_compress_zarr_img.ipynb
+++ b/notebooks/15_la_compress_zarr_img.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,68 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "numcodec 'imagecodecs_aec' already registered\n",
-      "numcodec 'imagecodecs_apng' already registered\n",
-      "numcodec 'imagecodecs_avif' already registered\n",
-      "numcodec 'imagecodecs_bitorder' already registered\n",
-      "numcodec 'imagecodecs_bitshuffle' already registered\n",
-      "numcodec 'imagecodecs_blosc' already registered\n",
-      "numcodec 'imagecodecs_blosc2' already registered\n",
-      "numcodec 'imagecodecs_brotli' already registered\n",
-      "numcodec 'imagecodecs_byteshuffle' already registered\n",
-      "numcodec 'imagecodecs_bz2' already registered\n",
-      "numcodec 'imagecodecs_cms' already registered\n",
-      "numcodec 'imagecodecs_deflate' already registered\n",
-      "numcodec 'imagecodecs_delta' already registered\n",
-      "numcodec 'imagecodecs_float24' already registered\n",
-      "numcodec 'imagecodecs_floatpred' already registered\n",
-      "numcodec 'imagecodecs_gif' already registered\n",
-      "numcodec 'imagecodecs_heif' already registered\n",
-      "numcodec 'imagecodecs_jetraw' already registered\n",
-      "numcodec 'imagecodecs_jpeg' already registered\n",
-      "numcodec 'imagecodecs_jpeg2k' already registered\n",
-      "numcodec 'imagecodecs_jpegls' already registered\n",
-      "numcodec 'imagecodecs_jpegxl' already registered\n",
-      "numcodec 'imagecodecs_jpegxr' already registered\n",
-      "numcodec 'imagecodecs_lerc' already registered\n",
-      "numcodec 'imagecodecs_ljpeg' already registered\n",
-      "numcodec 'imagecodecs_lz4' already registered\n",
-      "numcodec 'imagecodecs_lz4f' already registered\n",
-      "numcodec 'imagecodecs_lzf' already registered\n",
-      "numcodec 'imagecodecs_lzma' already registered\n",
-      "numcodec 'imagecodecs_lzw' already registered\n",
-      "numcodec 'imagecodecs_packbits' already registered\n",
-      "numcodec 'imagecodecs_pglz' already registered\n",
-      "numcodec 'imagecodecs_png' already registered\n",
-      "numcodec 'imagecodecs_qoi' already registered\n",
-      "numcodec 'imagecodecs_rcomp' already registered\n",
-      "numcodec 'imagecodecs_snappy' already registered\n",
-      "numcodec 'imagecodecs_spng' already registered\n",
-      "numcodec 'imagecodecs_tiff' already registered\n",
-      "numcodec 'imagecodecs_webp' already registered\n",
-      "numcodec 'imagecodecs_xor' already registered\n",
-      "numcodec 'imagecodecs_zfp' already registered\n",
-      "numcodec 'imagecodecs_zlib' already registered\n",
-      "numcodec 'imagecodecs_zlibng' already registered\n",
-      "numcodec 'imagecodecs_zopfli' already registered\n",
-      "numcodec 'imagecodecs_zstd' already registered\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "register_codecs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,24 +74,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 32%|███▏      | 117290/370234 [33:31<1:22:47, 50.92it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "image_compressor = Jpeg2k(level=75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "output_store = zarr.open(\n",
     "    \"/data/scratch/ankile/furniture-data-old/data/processed/sim/image_small/one_leg/data_compressed.zarr\",\n",
     "    mode=\"w\",\n",
-    ")\n",
-    "image_compressor = Jpeg2k(level=50)\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_ = output_store.require_dataset(\n",
     "    name=\"color_image1\",\n",
     "    shape=old_zarr[\"color_image1\"].shape[1:],\n",
@@ -152,8 +107,49 @@
     "    dtype=np.uint8,\n",
     ")\n",
     "\n",
-    "for i in tqdm(range(len(old_zarr[\"color_image1\"]))):\n",
+    "# for i in tqdm(range(len(old_zarr[\"color_image1\"]))):\n",
+    "for i in tqdm(range(10_000)):\n",
     "    output_store[\"color_image1\"].append(old_zarr[\"color_image1\"][i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Have a look at the compressed data to verify that it looks alright"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store = zarr.open(\n",
+    "    \"/data/scratch/ankile/furniture-data-old/data/processed/sim/image_small/one_leg/data_compressed.zarr\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'color_image1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/data/scratch/ankile/furniture-diffusion/notebooks/15_la_compress_zarr_img.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/15_la_compress_zarr_img.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m store[\u001b[39m\"\u001b[39;49m\u001b[39mcolor_image1\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39mshape\n",
+      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/hierarchy.py:500\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    498\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(item)\n\u001b[1;32m    499\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 500\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(item)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'color_image1'"
+     ]
+    }
+   ],
+   "source": [
+    "store[\"color_image1\"].shape"
    ]
   },
   {
