Move the multiple actions into the actor

--- a/notebooks/15_la_compress_zarr_img.ipynb
+++ b/notebooks/15_la_compress_zarr_img.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "(224, 224, 3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(370234, 224, 224, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_zarr[\"color_image1\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,21 +115,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [02:47<00:00, 59.56it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "_ = output_store.require_dataset(\n",
     "    name=\"color_image1\",\n",
-    "    shape=old_zarr[\"color_image1\"].shape[1:],\n",
+    "    shape=(10_000,) + old_zarr[\"color_image1\"].shape[1:],\n",
     "    chunks=(224, 224, 3),\n",
     "    compressor=image_compressor,\n",
     "    dtype=np.uint8,\n",
     ")\n",
     "\n",
     "# for i in tqdm(range(len(old_zarr[\"color_image1\"]))):\n",
-    "for i in tqdm(range(10_000)):\n",
-    "    output_store[\"color_image1\"].append(old_zarr[\"color_image1\"][i])"
+    "output_store[\"color_image1\"][:] = old_zarr[\"color_image1\"][:10_000]"
    ]
   },
   {
@@ -121,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,24 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'color_image1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/data/scratch/ankile/furniture-diffusion/notebooks/15_la_compress_zarr_img.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex007.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/15_la_compress_zarr_img.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m store[\u001b[39m\"\u001b[39;49m\u001b[39mcolor_image1\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39mshape\n",
-      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/hierarchy.py:500\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    498\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(item)\n\u001b[1;32m    499\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 500\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(item)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'color_image1'"
-     ]
+     "data": {
+      "text/plain": [
+       "224.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "store[\"color_image1\"].shape"
+    "(store[\"color_image1\"].shape[0] - 224) / 10_000"
    ]
   },
   {
