Iron out bugs with accessing observations from Zarr dataset

--- a/notebooks/14_la_render_video.ipynb
+++ b/notebooks/14_la_render_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import imageio\n",
     "from io import BytesIO\n",
     "import pickle\n",
-    "import zarr"
+    "import zarr\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,6 +531,78 @@
    ],
    "source": [
     "data[\"data\"][\"timestamp\"][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More Unrelated Testing: Inspect demo collected from teleop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pkl_file = \"/data/pulkitag/data/anthony/repos/research2/furniture-bench/test/drawer/2023-12-18-17:42:56/2023-12-18-17:42:56.pkl\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(pkl_file, \"rb\") as f:\n",
+    "    rollout = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1297/1297 [00:01<00:00, 1113.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as output_teleop.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Produce a video of the rollout\n",
+    "vid1, vid2 = zip(\n",
+    "    *[(o[\"color_image1\"], o[\"color_image2\"]) for o in rollout[\"observations\"]]\n",
+    ")\n",
+    "\n",
+    "vid = np.concatenate([vid1, vid2], axis=2)\n",
+    "\n",
+    "# make video\n",
+    "create_gif_or_mp4(vid, \"output_teleop.mp4\")"
    ]
   },
   {
