More investigations into optimization of file system access

--- a/notebooks/14_la_render_video.ipynb
+++ b/notebooks/14_la_render_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,19 +399,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['observations', 'actions', 'rewards', 'success', 'furniture'])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rollout_path = \"/data/pulkitag/data/ankile/furniture-data/data/raw/sim_rollouts/2023-12-05_12-00-34/rollout_0.pkl\"\n",
+    "rollout_path = \"/data/pulkitag/data/ankile/furniture-data/data/raw/sim_rollouts/2024-01-03_08-23-57/rollout_15.pkl\"\n",
     "\n",
     "with open(rollout_path, \"rb\") as f:\n",
-    "    rollout = pickle.load(f)"
+    "    rollout = pickle.load(f)\n",
+    "\n",
+    "rollout.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, 0.0)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rollout[\"success\"], sum(rollout[\"rewards\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(600, 600, 600)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rollout[\"observations\"]), len(rollout[\"actions\"]), len(rollout[\"rewards\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,34 +478,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 114.36it/s]"
+      "100%|██████████| 600/600 [00:00<00:00, 758.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as output.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "File saved as output_rollout.mp4\n"
      ]
     }
    ],
    "source": [
     "# make video\n",
-    "create_gif_or_mp4(vid, \"output.mp4\")"
+    "create_gif_or_mp4(vid, \"output_rollout.mp4\")"
    ]
   },
   {
@@ -532,13 +578,6 @@
    "source": [
     "data[\"data\"][\"timestamp\"][3]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
