--- a/notebooks/17_la_change_compression_chunk_size.ipynb
+++ b/notebooks/17_la_change_compression_chunk_size.ipynb
@@ -87,6 +87,110 @@
     "# Check the storage size of the dataset in GB\n",
     "store[\"color_image1\"].nbytes / 1e9"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do a one-off conversion of a dataset with chunksize 1 to 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datapath = data_base_dir / \"processed/sim/image_small/one_leg/data_batch_32.zarr\"\n",
+    "\n",
+    "store = zarr.open(datapath, mode=\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# z.create_dataset(\n",
+    "#     \"reward\",\n",
+    "#     shape=(0,),\n",
+    "#     dtype=np.float32,\n",
+    "#     chunks=(chunksize,),\n",
+    "# )\n",
+    "# z.create_dataset(\n",
+    "#     \"skill\",\n",
+    "#     shape=(0,),\n",
+    "#     dtype=np.float32,\n",
+    "#     chunks=(chunksize,),\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3696 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3696/3696 [58:34<00:00,  1.05it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "store.create_dataset(\n",
+    "    \"reward\",\n",
+    "    shape=store[\"reward_old\"].shape,\n",
+    "    dtype=np.int8,\n",
+    "    chunks=(100,),\n",
+    ")\n",
+    "\n",
+    "# Iterate over the dataset and copy over\n",
+    "for i in tqdm(range(0, store[\"reward_old\"].shape[0], 100)):\n",
+    "    store[\"reward\"][i : i + 100] = store[\"reward_old\"][i : i + 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3696/3696 [52:59<00:00,  1.16it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "store.create_dataset(\n",
+    "    \"skill\",\n",
+    "    shape=store[\"skill_old\"].shape,\n",
+    "    dtype=np.int8,\n",
+    "    chunks=(100,),\n",
+    ")\n",
+    "\n",
+    "# Iterate over the dataset and copy over\n",
+    "for i in tqdm(range(0, store[\"skill_old\"].shape[0], 100)):\n",
+    "    store[\"skill\"][i : i + 100] = store[\"skill_old\"][i : i + 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
