Inspect cabinet demo data

--- a/notebooks/14_la_render_video.ipynb
+++ b/notebooks/14_la_render_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,13 @@
     "from io import BytesIO\n",
     "import pickle\n",
     "import zarr\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from src.visualization.render_mp4 import create_mp4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_gif_or_mp4(np_images, filename, fps=10):\n",
-    "    # duration = 1000 / fps\n",
-    "    with imageio.get_writer(filename, fps=fps) as writer:\n",
-    "        for img in tqdm(np_images):\n",
-    "            writer.append_data(img)\n",
-    "    print(f\"File saved as {filename}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +28,7 @@
        "(750, 720, 1280, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,41 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved as output.gif\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Usage Example\n",
-    "# np_images is your NumPy array of shape (time, H, W, C)\n",
-    "# For GIF\n",
-    "create_gif_or_mp4(np_images, \"output.gif\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/750 [00:00<?, ?it/s]"
+      "  0%|          | 2/750 [00:00<00:42, 17.75it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 750/750 [00:03<00:00, 207.87it/s]\n"
+      "100%|██████████| 750/750 [00:03<00:00, 211.11it/s]"
      ]
     },
     {
@@ -102,11 +69,18 @@
      "text": [
       "File saved as output.mp4\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
     "# For MP4\n",
-    "create_gif_or_mp4(np_images, \"output.mp4\")"
+    "create_mp4(np_images, \"output.mp4\")"
    ]
   },
   {
