Streamline data rollout augmentation pipeline

--- a/notebooks/18_la_augment_demos_with_rollouts.ipynb
+++ b/notebooks/18_la_augment_demos_with_rollouts.ipynb
@@ -133,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "152"
       ]
      },
      "execution_count": 7,
@@ -166,7 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 461/461 [00:00<00:00, 803.99it/s]"
+      "100%|██████████| 455/455 [00:00<00:00, 799.92it/s]"
      ]
     },
     {
@@ -206,26 +206,24 @@
    "source": [
     "# Get an encoder\n",
     "encoder = get_encoder(\"vip\", freeze=True, device=\"cuda:0\")\n",
-    "batch_size = 1024"
+    "batch_size = 128"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/451 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 451/451 [40:20<00:00,  5.37s/it]\n"
+      " 22%|██▏       | 34/152 [03:28<12:55,  6.58s/it]Exception ignored in: <function _xla_gc_callback at 0x7f3e93acad30>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/jax/_src/lib/__init__.py\", line 103, in _xla_gc_callback\n",
+      "    def _xla_gc_callback(*args):\n",
+      "KeyboardInterrupt: \n",
+      " 24%|██▎       | 36/152 [03:38<11:25,  5.91s/it]"
      ]
     }
    ],
@@ -253,27 +251,6 @@
     "    store[\"feature1\"].append(demo_features1)\n",
     "    store[\"feature2\"].append(demo_features2)\n",
     "    store[\"rollout_paths\"].append([path])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "259640"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check length of actions after\n",
-    "store[\"episode_ends\"][-1]"
    ]
   },
   {
